# fastapi-mongodb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yaml  compose.test.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: build.yml  deploy.yml  test.yml
app/adapters/: studentAdapter.py  userAdapter.py  userTypeAdapter.py
app/controllers/: studentController.py  userController.py  userTypeController.py
app/database/: __init__.py  serializers.py
app/models/: studentModel.py  userModel.py  userTypeModel.py
app/schemas/: studentSchemas.py  userSchema.py  userTypeSchema.py
app/services/: __init__.py  studentServices.py  userService.py  userTypeService.py
app/tests/: test_userType.py
scripts/: deploy.sh
