[tool.poetry]
name = "mongo-api"
version = "0.1.0"
description = ""
authors = ["Cinnamoon-dev <pedrolcsilva10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pymongo = "^4.10.1"
pydantic = {extras = ["email"], version = "^2.11.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
